# libstc42

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
include/: priority_queue.h  vector.h
include/STC42/: list.h  priority_queue.h  vector.h
include/STC42/internal/: common.h  template.h
include/internal/: undef.h
test/src/: list.c  list.cpp  priority_queue.c  priority_queue.cpp  vector.c  vector.cpp
